feat: Implementa GetProducts,  GetProduct, Update e testes de integração
