# internal/infra/web/product_handler.go
@@ -4,7 +4,8 @@ import (
 	"encoding/json"
 	"fmt"
 	"github.com/HaroldoFV/product-service/internal/domain"
-	"github.com/HaroldoFV/product-service/internal/usecase"
+	usecase "github.com/HaroldoFV/product-service/internal/usecase"
+	"github.com/go-chi/chi"
 	"net/http"
 	"strconv"
 )
@@ -78,7 +79,7 @@ func (h *WebProductHandler) Create(w http.ResponseWriter, r *http.Request) {
 // @Failure 404 {object} Error
 // @Failure 500 {object} Error
 // @Router /products [get]
-func (h *WebProductHandler) List(w http.ResponseWriter, r *http.Request) {
+func (h *WebProductHandler) GetProducts(w http.ResponseWriter, r *http.Request) {
 	page, err := strconv.Atoi(r.URL.Query().Get("page"))
 	if err != nil || page < 1 {
 		page = 1
@@ -107,6 +108,118 @@ func (h *WebProductHandler) List(w http.ResponseWriter, r *http.Request) {
 		Page:       page,
 		Limit:      limit,
 		TotalPages: (totalCount + limit - 1) / limit,
+	}
+
+	w.Header().Set("Content-Type", "application/json")
+	w.WriteHeader(http.StatusOK)
+	err = json.NewEncoder(w).Encode(response)
+	if err != nil {
+		fmt.Println("Error encoding response:", err)
+		http.Error(w, err.Error(), http.StatusInternalServerError)
+		return
+	}
+
+}
+
+// Update Product godoc
+// @Summary Update Product
+// @Description Update Product
+// @Tags products
+// @Accept json
+// @Produce json
+// @Param id path string true "Product ID" Format(uuid)
+// @Param request body usecase.ProductUpdateInputDTO true "product Request"
+// @Success 200 {object} usecase.ProductOutputDTO
+// @Failure 404 {object} Error
+// @Failure 500 {object} Error
+// @Router /products/{id} [put]
+func (h *WebProductHandler) Update(w http.ResponseWriter, r *http.Request) {
+	id := chi.URLParam(r, "id")
+	if id == "" {
+		w.WriteHeader(http.StatusBadRequest)
+		err := json.NewEncoder(w).Encode(Error{Message: "missing product ID"})
+		if err != nil {
+			http.Error(w, err.Error(), http.StatusInternalServerError)
+		}
+		return
+	}
+
+	var dto usecase.ProductUpdateInputDTO
+	err := json.NewDecoder(r.Body).Decode(&dto)
+	if err != nil {
+		w.WriteHeader(http.StatusBadRequest)
+		err := json.NewEncoder(w).Encode(Error{Message: err.Error()})
+		if err != nil {
+			http.Error(w, err.Error(), http.StatusInternalServerError)
+		}
+		return
+	}
+
+	dto.ID = id
+
+	updateProductUseCase := usecase.NewUpdateProductUseCase(h.ProductRepository)
+	output, err := updateProductUseCase.Execute(dto)
+	if err != nil {
+		status := http.StatusInternalServerError
+		if err.Error() == "product not found" {
+			status = http.StatusNotFound
+		}
+		w.WriteHeader(status)
+		err := json.NewEncoder(w).Encode(Error{Message: err.Error()})
+		if err != nil {
+			http.Error(w, err.Error(), http.StatusInternalServerError)
+		}
+		return
+	}
+
+	w.Header().Set("Content-Type", "application/json")
+	w.WriteHeader(http.StatusOK)
+	json.NewEncoder(w).Encode(output)
+}
+
+// GetProduct godoc
+// @Summary Get Product
+// @Description Get Product
+// @Tags products
+// @Accept json
+// @Produce json
+// @Param id path string true "Product ID" Format(uuid)
+// @Success 200 {object} usecase.ProductOutputDTO
+// @Failure 404 {object} Error
+// @Failure 500 {object} Error
+// @Router /products/{id} [get]
+func (h *WebProductHandler) GetProduct(w http.ResponseWriter, r *http.Request) {
+	id := chi.URLParam(r, "id")
+	if id == "" {
+		w.WriteHeader(http.StatusBadRequest)
+		err := json.NewEncoder(w).Encode(Error{Message: "missing product ID"})
+		if err != nil {
+			http.Error(w, err.Error(), http.StatusInternalServerError)
+		}
+		return
+	}
+
+	getProductUseCase := usecase.NewGetProductUseCase(h.ProductRepository)
+	output, err := getProductUseCase.Execute(id)
+	if err != nil {
+		status := http.StatusInternalServerError
+		if err.Error() == fmt.Sprintf("product with id %s not found", id) {
+			status = http.StatusNotFound
+		}
+		w.WriteHeader(status)
+		err := json.NewEncoder(w).Encode(Error{Message: err.Error()})
+		if err != nil {
+			http.Error(w, err.Error(), http.StatusInternalServerError)
+		}
+		return
+	}
+
+	response := usecase.ProductOutputDTO{
+		ID:          output.ID,
+		Name:        output.Name,
+		Description: output.Description,
+		Price:       output.Price,
+		Status:      output.Status,
 	}
 
 	w.Header().Set("Content-Type", "application/json")
