# internal/usecase/product_dto.go
@@ -13,3 +13,10 @@ type ProductOutputDTO struct {
 	Price       float64 `json:"price"`
 	Status      string  `json:"status"`
 }
+
+type ProductUpdateInputDTO struct {
+	ID          string  `json:"id"`
+	Name        string  `json:"name"`
+	Description string  `json:"description"`
+	Price       float64 `json:"price"`
+}
